--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/ico" href="/logos/logoassinatura.ico" />
+    <link rel="icon" type="image/ico" href="images/logos/logoassinatura.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TEF Style</title>
   </head>
